--- a/package.json
+++ b/package.json
@@ -10,32 +10,45 @@
     "test": "jest"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^4.0.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.2",
+    "mongoose": "^8.8.1",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.15",
+    "next-auth": "^4.24.10",
     "nodemailer": "^6.9.15",
+    "pinecone-client": "^2.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ts-node": "^10.9.2",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.16.13",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^20.17.6",
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
+    "@types/validator": "^13.12.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "mongodb-memory-server": "^10.1.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
   }
 }
