--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "next-auth": "^4.24.10",
     "nodemailer": "^6.9.15",
     "pinecone-client": "^2.0.0",
+    "qrcode": "^1.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "speakeasy": "^2.0.0",
     "ts-node": "^10.9.2",
     "validator": "^13.12.0"
   },
@@ -38,8 +40,10 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^20.17.6",
     "@types/nodemailer": "^6.4.16",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
+    "@types/speakeasy": "^2.0.10",
     "@types/validator": "^13.12.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
