--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@pinecone-database/pinecone": "^4.0.0",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
+    "mammoth": "^1.8.0",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.15",
     "next-auth": "^4.24.10",
     "nodemailer": "^6.9.15",
+    "pdf-parse": "^1.1.1",
     "pinecone-client": "^2.0.0",
     "qrcode": "^1.5.4",
     "react": "^18",
@@ -40,6 +43,7 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^20.17.6",
     "@types/nodemailer": "^6.4.16",
+    "@types/pdf-parse": "^1.1.4",
     "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18",
