--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.5",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.8.1",
     "next": "14.2.15",
+    "next-auth": "^4.24.10",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "tailwind": "^4.0.0",
+    "topcv": "file:"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,6 +33,6 @@
     "eslint-config-next": "14.2.15",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
-    "typescript": "^5"
+    "typescript": "5.6.3"
   }
 }
