--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.5",
     "@pinecone-database/pinecone": "^4.0.0",
     "@xenova/transformers": "^2.17.2",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
@@ -25,12 +29,9 @@
     "pdf-parse": "^1.1.1",
     "pinecone-client": "^2.0.0",
     "qrcode": "^1.5.4",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.5",
-    "autoprefixer": "^10.4.20",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "speakeasy": "^2.0.0",
     "ts-node": "^10.9.2",
     "validator": "^13.12.0"
